colang-cli/tests/samples/good/arithmetic_precedence.co
fun main() {
  assert(2 + 3 * 4 == 14);
  assert((2 + 3) * 4 == 20);
}
