colang-cli/tests/samples/compile_error/add_operator_different_types.co
fun main() {
  write "ab" + 2;
}
